fixed bug with horizontal scrolling on tower page

--- a/app/static/sass/ringing_room.scss
+++ b/app/static/sass/ringing_room.scss
@@ -2,9 +2,10 @@
 @import "circle";
 
 
-body:window-inactive {
-    opacity: 0.4; // blur when window inactive
+body {
+  overflow-x: hidden;
 }
+
 
 /* Tower Controls */
 
